crates/bijux-dna-domain-bam/tests/snapshots/bijux-dna-domain-bam__contracts__stage_contract__bam_haplogroups.snap
---
source: crates/bijux-dna-domain-bam/tests/contracts/stage_contract_snapshots.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "audit_artifacts": [
    {
      "filename": "haplogroups.json",
      "name": "haplogroups"
    },
    {
      "filename": "haplogroups.summary.json",
      "name": "summary"
    },
    {
      "filename": "stage.metrics.json",
      "name": "stage_metrics"
    }
  ],
  "inputs": [
    "bam"
  ],
  "io": {
    "deterministic": true,
    "duplicate_policy": "preserves_duplicates",
    "emits_bam": false,
    "emits_report": true,
    "indexing": "requires_index_and_refuses_missing_index",
    "input_kind": "bam",
    "mapping_quality_policy": "no_mapping_quality_filter",
    "nondeterminism_reason": null,
    "output_kind": "report",
    "read_group_policy": "requires_read_groups_for_sample_metadata",
    "sorting": "requires_coordinate_sorted_input"
  },
  "outputs": [
    "haplogroups",
    "haplogroup_report",
    "summary",
    "stage_metrics"
  ],
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "bam.haplogroups",
  "tool_ids": [
    "yleaf"
  ]
}
