crates/bijux-dna-domain-bam/tests/snapshots/bijux-dna-domain-bam__contracts__stage_contract__bam_mapping_summary.snap
---
source: crates/bijux-dna-domain-bam/tests/contracts/stage_contract_snapshots.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "audit_artifacts": [
    {
      "filename": "flagstat.txt",
      "name": "flagstat"
    },
    {
      "filename": "idxstats.txt",
      "name": "idxstats"
    },
    {
      "filename": "samtools_stats.txt",
      "name": "stats"
    },
    {
      "filename": "mapping.summary.json",
      "name": "summary"
    },
    {
      "filename": "stage.metrics.json",
      "name": "stage_metrics"
    }
  ],
  "inputs": [
    "bam"
  ],
  "io": {
    "deterministic": true,
    "duplicate_policy": "no_duplicate_marking",
    "emits_bam": false,
    "emits_report": true,
    "indexing": "index_optional",
    "input_kind": "bam",
    "mapping_quality_policy": "no_mapping_quality_filter",
    "nondeterminism_reason": null,
    "output_kind": "report",
    "read_group_policy": "requires_read_groups_for_sample_metadata",
    "sorting": "accepts_unsorted_bam"
  },
  "outputs": [
    "flagstat",
    "idxstats",
    "stats",
    "summary",
    "stage_metrics"
  ],
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "bam.mapping_summary",
  "tool_ids": [
    "samtools"
  ]
}
