crates/bijux-dna-domain-bam/tests/snapshots/bijux-dna-domain-bam__contracts__stage_contract__bam_mapq_filter.snap
---
source: crates/bijux-dna-domain-bam/tests/contracts/stage_contract_snapshots.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "audit_artifacts": [
    {
      "filename": "filtered.bam",
      "name": "filtered_bam"
    },
    {
      "filename": "filtered.bam.bai",
      "name": "filtered_bai"
    },
    {
      "filename": "flagstat.before.txt",
      "name": "flagstat_before"
    },
    {
      "filename": "flagstat.after.txt",
      "name": "flagstat_after"
    },
    {
      "filename": "mapq_filter.summary.json",
      "name": "summary"
    },
    {
      "filename": "stage.metrics.json",
      "name": "stage_metrics"
    }
  ],
  "inputs": [
    "bam"
  ],
  "io": {
    "deterministic": true,
    "duplicate_policy": "preserves_duplicates",
    "emits_bam": true,
    "emits_report": true,
    "indexing": "requires_index_and_produces_index",
    "input_kind": "bam",
    "mapping_quality_policy": "filters_by_mapping_quality_threshold",
    "nondeterminism_reason": null,
    "output_kind": "bam",
    "read_group_policy": "preserves_read_groups",
    "sorting": "requires_coordinate_sorted_input"
  },
  "outputs": [
    "filtered_bam",
    "filtered_bai",
    "flagstat_before",
    "flagstat_after",
    "idxstats_before",
    "idxstats_after",
    "summary",
    "stage_metrics"
  ],
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "bam.mapq_filter",
  "tool_ids": [
    "samtools",
    "bamtools"
  ]
}
