crates/bijux-dna-domain-bam/tests/snapshots/bijux-dna-domain-bam__contracts__stage_contract__bam_overlap_correction.snap
---
source: crates/bijux-dna-domain-bam/tests/contracts/stage_contract_snapshots.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "audit_artifacts": [
    {
      "filename": "overlap.corrected.bam",
      "name": "overlap_corrected_bam"
    },
    {
      "filename": "overlap.corrected.bam.bai",
      "name": "overlap_corrected_bai"
    },
    {
      "filename": "overlap_correction.summary.json",
      "name": "summary"
    },
    {
      "filename": "stage.metrics.json",
      "name": "stage_metrics"
    }
  ],
  "inputs": [
    "bam"
  ],
  "io": {
    "deterministic": true,
    "duplicate_policy": "preserves_duplicates",
    "emits_bam": true,
    "emits_report": true,
    "indexing": "requires_index_and_produces_index",
    "input_kind": "bam",
    "mapping_quality_policy": "no_mapping_quality_filter",
    "nondeterminism_reason": null,
    "output_kind": "bam",
    "read_group_policy": "preserves_read_groups",
    "sorting": "requires_coordinate_sorted_input"
  },
  "outputs": [
    "overlap_corrected_bam",
    "overlap_corrected_bai",
    "flagstat_before",
    "flagstat_after",
    "idxstats_before",
    "idxstats_after",
    "summary",
    "stage_metrics"
  ],
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "bam.overlap_correction",
  "tool_ids": [
    "bamutil"
  ]
}
